# ISP_baseline_fork

./: .gitignore  2025-10-06_train_with_our_dataset.ipynb  2025-10-08_train_b_equinet_with_our_dataset.ipynb  2025-10-19_train_b_equinet_with_our_dataset_nk_10.ipynb  2025-10-19_train_with_our_dataset_nk_10.ipynb  2025-10-27_train_b_equinet_with_our_dataset_nk_10_flipped_axes.ipynb  2025-10-27_train_equinet_with_our_dataset_nk_10_flipped_axes.ipynb  B_EquiNet_Compressed_10hSquares.ipynb  EquiNet_Uncompressed_10hSquares.ipynb  LICENSE  README.md  SwitchNetModel.py  WideBNet_10hSquares.ipynb  env.yaml  eval_EquiNet_Uncompressed.py  gitignore.txt  monitor_tail.sh  pyproject.toml  start_jupyter_notebook.sh  train_B_EquiNet_Compressed.py  train_EquiNet_Uncompressed.py  trainers.py
EquivariantModels/: Compressed.py  Uncompressed.py
ISP_baseline/: __init__.py
MatlabCodes/: FWI_prototype_multi_freq.m  farfieldmetric.m
WideBNetModel/: WideBNet_ConvLocal.py  morton.py
colabs/: Compressed_10hSquares.ipynb  Compressed_3510Triangles.ipynb  SwitchNet_10hSquares.ipynb  SwitchNet_3510Triangles.ipynb  Uncompressed_3510Triangles.ipynb  WideBNet_3510Squares_BlurSigma_0.75_ConvLocal.ipynb  WideBNet_3510Triangles.ipynb  compressed.ipynb  diffusion_conditional_UViT_10hSquares.ipynb  diffusion_conditional_UViT_3510Triangles.ipynb  diffusion_conditional_UViT_SheppLogan.ipynb  switchnet.ipynb  uncompressed.ipynb  widebnet.ipynb
examples/: Uncompressed_10hSquares.ipynb  Uncompressed_SheppLogan.ipynb  WideBNet_10hSquares.ipynb  WideBNet_SheppLogan.ipynb
src/: trainers.py
(+56 files in other folders)
